1.添加补全assemble_fragment表格SourceName和Text这两个字段的程序。2. 创建Yotta数据库所有表格的索引

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,6 +5,11 @@
     <title>你好</title>
 </head>
 <body>
-世界
+    <h1>
+        手动添加jar到本地maven仓库：ZHConverter-2.6.12.jar这个包
+    </h1>
+    <p>
+mvn install:install-file -Dfile=D:\ZHConverter-2.6.12.jar -DgroupId=com.spreada.utils -DartifactId=ZHConverter -Dversion=2.6.12 -Dpackaging=jar
+    </p>
 </body>
 </html>
